# the-other-dude

./: .dockerignore  .env.example  .env.staging.example  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  LICENSE  QUICKSTART.md  README.md  docker-compose.build.yml  docker-compose.observability.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  setup.py  web_redesign.md
backend/: .gitignore  alembic.ini  gunicorn.conf.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_routeros_major_version_and_poller_role.py  003_metrics_hypertables.py  004_config_management.py  005_alerting_and_firmware.py  006_advanced_features.py  007_audit_logs.py  008_maintenance_windows.py  009_api_keys.py  010_wireguard_vpn.py  012_seed_starter_templates.py  013_certificates.py  014_timescaledb_retention.py  015_password_reset_tokens.py  016_zero_knowledge_schema.py  017_openbao_envelope_encryption.py  018_data_encryption.py  019_deprecate_bcrypt.py  020_tls_mode_opt_in.py  021_system_tenant_for_audit.py  022_rls_super_admin_devices.py  023_slack_notification_channel.py  024_contact_email_and_offline_rule.py  025_fix_key_access_log_device_fk.py  026_system_settings.py  027_router_config_snapshots.py  028_device_ssh_host_key.py  029_vpn_tenant_isolation.py  030_create_sites_table.py  031_wireless_registrations_hypertable.py  032_device_interfaces_table.py  033_wireless_links_table.py  034_create_sectors_table.py  035_site_alert_rules_and_events.py  036_performance_indexes.py  037_credential_profiles_table.py  038_snmp_profiles_table.py  039_devices_snmp_columns.py  040_snmp_metrics_hypertable.py
backend/app/: __init__.py  config.py  database.py  logging_config.py  main.py  observability.py
backend/app/middleware/: __init__.py  rate_limit.py  rbac.py  request_id.py  security_headers.py  tenant_context.py
backend/app/models/: __init__.py  alert.py  api_key.py  audit_log.py  base.py  certificate.py  config_backup.py  config_template.py  credential_profile.py  device.py  device_interface.py  firmware.py  key_set.py  maintenance_window.py  sector.py  site.py  site_alert.py  tenant.py  user.py  vpn.py  wireless_link.py
backend/app/routers/: __init__.py  alerts.py  api_keys.py  audit_logs.py  auth.py  certificates.py  clients.py  config_backups.py  config_editor.py  config_history.py  credential_profiles.py  device_groups.py  device_logs.py  device_tags.py  devices.py  events.py  firmware.py  links.py  maintenance_windows.py  metrics.py  remote_access.py  reports.py  sectors.py  settings.py  signal_history.py  site_alerts.py  sites.py  snmp_profiles.py  sse.py  templates.py  tenants.py  topology.py  transparency.py  users.py  vpn.py  winbox_remote.py
backend/app/schemas/: __init__.py  auth.py  (+13 more)
backend/templates/: emergency_kit.html
backend/tests/: conftest.py  test_audit_config_backup.py  test_backup_scheduler.py  test_config_change_parser.py  test_config_change_subscriber.py  test_config_checkpoint.py  test_config_diff_service.py  test_config_history_service.py  test_config_snapshot_subscriber.py  test_config_snapshot_trigger.py  test_push_recovery.py  test_push_rollback_subscriber.py  test_restore_preview.py  test_retention_service.py  test_rsc_parser.py  test_srp_interop.py
(+578 files in other folders)
